--- a/kata/src/components/App.css
+++ b/kata/src/components/App.css
@@ -5,18 +5,19 @@ img {
 p {
     margin: 0px;
     padding: 0px;
-    font-weight: 200;
+    font-weight: 300;
 }
 
 main {
     min-height: 100vh;
     background-color: rgb(244, 246, 252);
+    font-size: 0.8rem;
 }
 
 h1, h2, h3, h4 {
     text-transform: uppercase;
-    font-size: 0.9rem;
-    color: grey;
+    font-size: 0.7rem;
+    color: rgb(176, 187, 199);
     margin: 20px 0px 10px;
     font-weight: 500;
 }
@@ -24,14 +25,47 @@ h1, h2, h3, h4 {
 .main-block {
     padding: 30px;
     background-color: white;
-    box-shadow: 2px 2px 8px rgb(210, 221, 255);
+    box-shadow: 3px 3px 10px rgb(210, 221, 255);
+    position: fixed;
+    top: 20vh;
+    left: 30vw;
+    width: 40vw;
 }
 
 .black-p {
-    font-weight: bold;
+    font-weight: 500;
     color: black;
 }
 
 .grey-p {
-    color: gray;
+    color: rgb(176, 187, 199);
+    font-weight: 400;
+}
+
+.trip-details {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    padding: 0px 30px;
+}
+
+button {
+    border: 2px solid rgb(239, 244, 255);
+    border-radius: 5px;
+    height: 70px;
+    width: 100%;
+    margin: 10px 0px;
+    background-color: transparent;
+}
+
+.btn-selected {
+    background-color: rgb(50, 97, 251);
+    border-color: rgb(50, 97, 251);
+    color: #ffffff
+}
+
+figure {
+    height: 25px;
+    width: 25px;
+    border-radius: 50%;
 }
